# mini-redis

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark_results.csv  build.ps1  mini_redis_benchmark.py  start_server.ps1  test_dump.db
bench/: loadgen.cpp
src/: main.cpp
src/protocol/: parser.cpp  parser.hpp  resp_parser.cpp  resp_parser.hpp  resp_utils.cpp  resp_utils.hpp
src/server/: commands.cpp  commands.hpp  iocp_server.cpp  replication.cpp  replication.hpp  server_common.hpp  tcp_server.cpp  tcp_server.hpp
src/storage/: aof_logger.cpp  aof_logger.hpp  kv_store.cpp  kv_store.hpp
src/utils/: config.cpp  config.hpp  logger.hpp
tests/: test_atomic_commands.cpp  test_config.cpp  test_main_mocks.cpp  test_protocol.cpp
